--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+  margin-bottom: 16px;
 }
 
 .footer-form {
@@ -534,6 +535,7 @@ img {
   width: 264px;
   height: 40px;
   background-color: transparent;
+  padding-left: 16px;
 }
 
 .footer-input::placeholder {
@@ -542,7 +544,6 @@ img {
   line-height: 2;
   letter-spacing: 0.04em;
   color: #fff;
-  padding-left: 16px;
 }
 
 .footer-form {
@@ -552,7 +553,7 @@ img {
 .footer-btn {
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   background: #4d5ae5;
   font-weight: 500;
@@ -566,10 +567,12 @@ img {
   justify-content: center;
   flex-direction: row;
   gap: 16px;
+  cursor: pointer;
 }
 
 .email-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
 /* -----------------Modal------------------- */
@@ -580,9 +583,11 @@ img {
   position: fixed;
   top: 0;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 0;
+  /* opacity: 0;
   visibility: hidden;
-  pointer-events: none;
+  pointer-events: none; */
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -599,12 +604,13 @@ img {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
 
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
@@ -619,25 +625,38 @@ img {
   justify-content: center;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
 }
 
 .icon-close {
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close:focus {
-  background-color: #404bbf;
+.icon-close:hover,
+.icon-close:focus {
+  fill: #ffffff;
 }
 
 .modal-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
   max-width: 360px;
-  padding-top: 72px;
+
   margin-bottom: 16px;
 }
 
@@ -649,6 +668,7 @@ img {
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -666,24 +686,25 @@ img {
 .modal-icon {
   fill: #2e2f42;
   position: absolute;
-  left: 19px;
+  left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-label {
-  display: inline-block;
+  display: block;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
 }
 
 .modal-field {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-textarea {
@@ -692,6 +713,11 @@ img {
   width: 100%;
   height: 120px;
   padding: 8px 16px;
+  background-color: transparent;
+}
+
+.modal-textarea:focus: {
+  border-color: #4d5ae5;
 }
 
 .modal-textarea::placeholder {
@@ -707,9 +733,10 @@ img {
   padding: 16px 32px;
   width: 169px;
   height: 56px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: #4d5ae5;
+  border: none;
 
+  background-color: #4d5ae5;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -721,6 +748,7 @@ img {
   align-items: center;
   margin-left: 96px;
   margin-top: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check-text {
