--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,11 @@ img {
   height: 40px;
   background-color: transparent;
   padding-left: 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
 }
 
 .footer-input::placeholder {
@@ -543,7 +548,7 @@ img {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #fff;
+  color: #ffffff;
 }
 
 .footer-form {
@@ -551,6 +556,7 @@ img {
 }
 
 .footer-btn {
+  border: none;
   border-radius: 4px;
   padding: 8px 24px;
   min-width: 165px;
@@ -636,6 +642,7 @@ img {
 .modal-close:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 .icon-close {
@@ -704,19 +711,26 @@ img {
 }
 
 .modal-field {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .modal-textarea {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
   height: 120px;
   padding: 8px 16px;
   background-color: transparent;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea:focus: {
+.modal-textarea:focus {
   border-color: #4d5ae5;
 }
 
@@ -728,27 +742,8 @@ img {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.modal-btn {
-  border-radius: 4px;
-  padding: 16px 32px;
-  width: 169px;
-  height: 56px;
-  border: none;
-
-  background-color: #4d5ae5;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  text-align: center;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 96px;
-  margin-top: 24px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.form-checbox {
+  margin-bottom: 24px;
 }
 
 .modal-check-text {
@@ -762,6 +757,7 @@ img {
 }
 
 .policy-link {
+  color: #4d5ae5;
   line-height: 1.33333;
   text-decoration: underline;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -779,15 +775,41 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   display: block;
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   fill: transparent;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .modal-check-text .modal-check-item {
   background-color: #404bbf;
   border-color: none;
   fill: #f4f4fd;
+  border: none;
+}
+
+.modal-btn {
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+
+  background-color: #4d5ae5;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  display: block;
+  cursor: pointer;
+  margin-left: 96px;
+  margin-top: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
