--- a/css/styles.css
+++ b/css/styles.css
@@ -642,16 +642,14 @@ img {
 .modal-close:focus {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
 }
 
-.icon-close {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-close:hover,
-.icon-close:focus {
+.modal-close:hover + .icon-close,
+.modal-close:focus + .icon-close {
   fill: #ffffff;
+}
+.icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
@@ -713,6 +711,9 @@ img {
 .modal-field {
   margin-bottom: 8px;
 }
+.modal-field-textarea {
+  margin-bottom: 16px;
+}
 
 .modal-textarea {
   font-size: 12px;
@@ -752,7 +753,6 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
   align-items: center;
 }
 
@@ -773,11 +773,12 @@ img {
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  display: block;
+
   margin-right: 8px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
+
   fill: transparent;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
