--- a/css/styles.css
+++ b/css/styles.css
@@ -644,13 +644,13 @@ img {
   border: none;
 }
 
-.modal-close:hover + .icon-close,
-.modal-close:focus + .icon-close {
-  fill: #ffffff;
-}
-
 .icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close:hover,
+.icon-close:focus {
+  fill: #ffffff;
 }
 
 .modal-title {
