--- a/css/styles.css
+++ b/css/styles.css
@@ -648,8 +648,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-close:hover,
-.icon-close:focus {
+.modal-close:hover .icon-close {
   fill: #ffffff;
 }
 
