--- a/css/styles.css
+++ b/css/styles.css
@@ -647,7 +647,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover .icon-close {
+.modal-close:hover .icon-close,
+.modal-close:focus .icon-close {
   fill: #ffffff;
 }
 
